--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cache-posts": "node scripts/cache.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "husky": "^7.0.4",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
   }
